--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,8 +5,8 @@ $purple: #7c3aed;
 $pink: #db2e77;
 $yellow:#f59e0d;
 $mint:#11b981;
-$text:#303645;
-$subtitle:#8a8f9a;
+$text:#6c707b;
+$subtitle:#b8bbc0;
 $select:#e5e7eb;
 $neonGreen: #6eb81b;
 * {
@@ -18,6 +18,54 @@ body {
     background: $greyLight;
 }
 
+h1 {
+    font-size: 28px;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 14px;
+    font-weight: bold;
+    color: $text;
+}
+
+.purple {
+    color: $purple;
+}
+
+.mint {
+    color: $mint;
+}
+
+.yellow {
+    color: $yellow;
+}
+
+.pink {
+    color: $pink;
+}
+
+.bg-purple {
+    background: $purple;
+}
+
+.bg-mint {
+    background: $mint;
+}
+
+.bg-yellow {
+    background: $yellow;
+}
+
+.bg-pink {
+    background: $pink;
+}
+
 #sideMenu {
     background: $greyDark;
     width: 240px;
@@ -25,31 +73,143 @@ body {
     top: 0;
     bottom: 0;
     transition: 1s;
+    padding: 20px 15px;
+    border-right: 1px solid $select;
+    .side-title {
+        display: flex;
+        padding: 0px 5px 20px 5px;
+        img {
+            width: 36px;
+        }
+        h1 {
+            align-self: center;
+            padding: 0;
+            margin: 0;
+            margin-left: 10px;
+        }
+    }
+    .users {
+        display: flex;
+        align-items: center;
+        position: relative;
+        padding: 0px 5px 20px 5px;
+        .img-wrap {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            overflow: hidden;
+            margin-right: 8px;
+        }
+        .details {
+            .title {
+                font-size: 14px;
+                font-weight: 700;
+            }
+            .caption {
+                font-size: 14px;
+                font-weight: 700;
+                color: $subtitle;
+            }
+        }
+    }
+}
+
+.search-area {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    margin: 10px 0 20px 0;
+    .fa {
+        color: $subtitle;
+        position: absolute;
+        top: 11px;
+        left: 10px;
+    }
+    input[type="text"] {
+        background: white;
+        border-radius: 6px;
+        border: 2px solid $select;
+        color: $subtitle;
+        padding: 8px 30px;
+        font-weight: 700;
+        width: 100%;
+        &:hover {
+            background: $greyLight;
+        }
+        &::placeholder {
+            color: $subtitle;
+        }
+        &:focus-visible {
+            outline: $greyDark auto 0px;
+        }
+    }
+}
+
+.max-button {
+    font-size: 14px;
+    cursor: pointer;
+    padding: 8px 15px;
+    border-radius: 6px;
+    margin-left: 10px;
+    border: 2px solid $select;
+    font-weight: 700;
+    &.btn-primary,
+    &.btn-secondary {
+        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+        &:hover {
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+            .mat-button-focus-overlay {
+                background-color: transparent;
+            }
+        }
+        &:focus {
+            .mat-button-focus-overlay {
+                background-color: transparent;
+            }
+        }
+    }
+    &.btn-primary {
+        background: $purple;
+        border: 2px solid $purple;
+    }
+    &.btn-secondary {
+        color: $text;
+    }
 }
 
 nav {
     a {
         display: block;
-        padding: 15px;
-        border-left: 5px solid transparent;
-        color: $subtitle;
-        //font-weight: 300;
+        padding: 10px;
+        border-radius: 6px;
+        margin-bottom: 5px;
+        color: $text;
         transition: all 1s;
+        font-weight: 700;
         &.active {
             background: $select;
-            border-left: 5px solid $subtitle;
         }
         &:hover {
             background: $select;
-            border-left: 5px solid $subtitle;
             text-decoration: none;
-            color: $subtitle;
+            color: $text;
         }
         .fa {
-            color: $subtitle;
-            //display: inline-block;
+            color: $text;
             width: 30px;
+            font-size: 20px;
         }
+    }
+}
+
+.teams {
+    .fa {
+        width: 20px;
+        font-size: 12px;
+    }
+    p {
+        color: $text;
+        font-weight: bold;
     }
 }
 
@@ -57,33 +217,53 @@ header {
     background: #fff;
     padding: 10px;
     margin-left: 240px;
-    .search-area {
-        display: inline-block;
-        .fa {
-            color: $greyDark;
-        }
-        input[type="text"] {
-            background: transparent;
-            border: none;
-            //border-bottom: 1px solid $greyLight;
-            color: $neonGreen;
-            padding: 8px 10px;
-            //width: 60%;
-            &:hover {
-                background: $greyLight;
-            }
-        }
+    border-bottom: 2px solid $select;
+    height: 75px;
+    position: relative;
+    .section-title {
+        position: absolute;
+        left: 10px;
+        margin: 17px;
     }
     .header-area {
-        display: inline-block;
         float: right;
         padding: 8px;
-        a {
-            display: inline-block;
-            padding-right: 20px;
-            color: #aaa;
-            &:hover {
-                text-decoration: none;
+    }
+}
+
+.contents {
+    margin-left: 240px;
+    .cards {
+        display: flex;
+        grid-column-gap: 20px;
+        margin: 10px 25px;
+        .card {
+            border: 1px solid $select;
+            width: 200px;
+            box-shadow: 0 0 1px 0px rgba(0, 0, 0, 0.12);
+            display: grid;
+            grid-template-columns: 60px 1fr;
+            border-radius: 6px;
+            h5.initials {
+                margin: 0;
+                padding: 20px 0px;
+                text-align: center;
+                border-radius: 6px 0 0 6px;
+                color: white;
+                font-weight: 600;
+            }
+            .card-text {
+                margin: 0;
+                padding: 0 15px;
+                align-self: center;
+                font-weight: 600;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                span {
+                    color: $text;
+                    font-weight: 500;
+                }
             }
         }
     }
