--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,18 +43,46 @@
         <div class="card">
             <h5 class="initials bg-pink">GA</h5>
             <p class="card-text">GraphQL Asteroid<br/><span class="">12 Members</span></p>
+            <div class="dropdown">
+                <a href="#" class="dropdown-btn"><i class="fa fa-ellipsis-v"></i></a>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                </div>
+            </div>
         </div>
         <div class="card">
             <h5 class="initials bg-purple">NB</h5>
             <p class="card-text">New Benefits<br/><span class="">8 Members</span></p>
+            <div class="dropdown">
+                <a href="#" class="dropdown-btn"><i class="fa fa-ellipsis-v"></i></a>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                </div>
+            </div>
         </div>
         <div class="card">
             <h5 class="initials bg-yellow">OE</h5>
             <p class="card-text">Onboarding<br/><span class="">14 Members</span></p>
+            <div class="dropdown">
+                <a href="#" class="dropdown-btn"><i class="fa fa-ellipsis-v"></i></a>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                </div>
+            </div>
         </div>
         <div class="card">
             <h5 class="initials bg-mint">IA</h5>
             <p class="card-text">iOS App<br/><span class="">2 Members</span></p>
+            <div class="dropdown">
+                <a href="#" class="dropdown-btn"><i class="fa fa-ellipsis-v"></i></a>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                </div>
+            </div>
         </div>
     </div>
 
